Update and rename College Pleaser.html to Pleaser.html

--- a/Pleaser.html
+++ b/Pleaser.html
@@ -12,7 +12,7 @@
 body {
     margin:0;
     padding:0;
-    background-image:url('geometry__2x.png');
+    background-image:url('https://puu.sh/sI4eQ/ede767e8f5.png');
     background-color:#eee;
     background-repeat:repeat;
 }
@@ -46,7 +46,7 @@ body {
 /* --------- BOX ONE AND TWO [color] ---------- */
 .color-1 {
     background-color:#18434a;
-    background-image:url('__kochiya_sanae_touhou_drawn_by_ke_ta__fcef81a7683dd985ca0fb92903192a4c.jpg');
+    background-image:url('https://puu.sh/sI4eH/5316364614.jpg');
 	background-size:125%;
 }
 
@@ -298,14 +298,14 @@ body {
 <div id="container_holder">
     <div class="box_satu color-1">
     <div class="titles">
-    <div class="name">name</div><!-- name-->
+    <div class="name">Name</div><!-- name-->
     JUSTIN <!-- your name -->
     </div>
     </div>
     <div class="box_satu color-2">
     <div class="titlus">
-    <span>age</span><!-- age-->
-    17 <!-- your age -->
+    <span>Age</span><!-- age-->
+    Depends <!-- your age -->
     </div>
     </div>
 
@@ -319,34 +319,34 @@ body {
      + <!-- plus button -->
     <div class="box_three">
     <div class="titlas">
-    <div class="zodiak">zodiac</div><!-- zodiac -->
+    <div class="zodiak">Zodiac</div><!-- zodiac -->
     AQUARIUS &#9810; <!-- your zodiac -->
     </div>
     </div>
 
     <div class="box_four">
     <div class="titlas">
-    <div class="zodiak">likes</div><!-- likes -->
+    <div class="zodiak">Likes</div><!-- likes -->
     <font color="red">HTML</font>, <font color="green">CSS</font>, <font color="purple">ANIME</font><!-- your likes -->
     </div>
     </div>
 
     <div class="box_five">
     <div class="titlos">
-    <div class="zodiak">about me</div>
+    <div class="zodiak">About Me</div>
     <!-- about [keep 4 lines!!] -->
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
+    Just a lazy kid who enjoys his hobbies to the fullest of his own abilities. Motivate me, then that's when progress is really made. Too bad most of that motivation goes to gaming. But otherwise, hello there! 
     </div>
     </div>
 
     <div class="box_six">
     <div class="titlas">
-    <div class="zodiak">LINKS</div>
+    <div class="zodiak">Hello!</div>
     <!-- links -->
-    <a href="#">quera</a>,
-    <a href="#">omega</a>,
-    <a href="#">ghoule</a>,
-    <a href="#">enigma</a>
+    <a href="#">Nothing</a>,
+    <a href="#">Else</a>,
+    <a href="#">To</a>,
+    <a href="#">Say</a>
     </div>
     </div>
 
