--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@ body {
     <div class="titlas">
     <div class="zodiak">Hello!</div>
     <!-- links -->
-    <a href="#">Nothing</a>,
-    <a href="#">Else</a>,
-    <a href="#">To</a>,
+    <a href="#">Nothing</a>
+    <a href="#">Else</a>
+    <a href="#">To</a>
     <a href="#">Say</a>
     </div>
     </div>
