--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@ body {
 
     <div class="box_six">
     <div class="titlas">
-    <div class="zodiak">Hello!</div>
+    <div class="zodiak">Links</div>
     <!-- links -->
+    <a href="https://lit-tracks.github.io/creativity/">Essay</a>
+    <a href="#">and</a>
     <a href="#">Nothing</a>
     <a href="#">Else</a>
-    <a href="#">To</a>
-    <a href="#">Say</a>
     </div>
     </div>
 
