--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ body {
     <div class="box_satu color-1">
     <div class="titles">
     <div class="name">Name</div><!-- name-->
-    JUSTIN RAMOS <!-- your name -->
+    Jaymason Nunuha <!-- your name -->
     </div>
     </div>
     <div class="box_satu color-2">
