--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
 /* --------- BOX ONE AND TWO [color] ---------- */
 .color-1 {
     background-color:#18434a;
-    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
+    background-image:url('https://puu.sh/thk3J/0959dd68cd.jpg');
 	background-size:125%;
 }
 
