--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ body {
 /* --------- BOX ONE AND TWO [color] ---------- */
 .color-1 {
     background-color:#18434a;
-    background-image:url('https://puu.sh/thk3J/0959dd68cd.jpg');
-	background-size:125%;
+    background-image:url('https://puu.sh/thk3z/f3374e3db4.jpg');
+	background-size:100%;
 }
 
 .color-2 {
