--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ body {
     background-color:#18434a;
     background-image:url('https://puu.sh/thk3z/f3374e3db4.jpg');
 	background-size:100%;
+	top:80px;
 }
 
 .color-2 {
