--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ body {
 /* --------- BOX ONE AND TWO [color] ---------- */
 .color-1 {
     background-color:#18434a;
-    background-image:url('https://puu.sh/thk3z/f3374e3db4.jpg');
+    background-image:url('https://puu.sh/thk3J/0959dd68cd.jpg');
 	background-size:100%;
-	top:80px;
+	background-position: 50%,50%;
 }
 
 .color-2 {
