--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
     background-color:#18434a;
     background-image:url('https://puu.sh/thk3J/0959dd68cd.jpg');
 	background-size:100%;
-	background-position: 50%,50%;
+	background-position: 50% 50%;
 }
 
 .color-2 {
