--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 body {
     margin:0;
     padding:0;
-    background-image:url('https://puu.sh/sI4eQ/ede767e8f5.png');
+    background-image:url('https://puu.sh/thkD6/ec8f750e66.jpg');
     background-color:#eee;
-    background-repeat:repeat;
+    background-repeat:no-repeat;
 }
 
 /* --------- CONTAINER + BACKGROUND FOR QUOTE  ---------- */
