--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
     background-image:url('https://puu.sh/thkD6/ec8f750e66.jpg');
     background-color:#eee;
     background-repeat:no-repeat;
+	width: 100%
 }
 
 /* --------- CONTAINER + BACKGROUND FOR QUOTE  ---------- */
