--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ body {
 
 .color-2 {
    background-color:#fff;
+   background-image:url('https://puu.sh/thliP/ffb6b0a1d6.jpg');
+	background-size:70%;
+	background-position: 50% 50%;
 }
 
 /* --------- TITLE ONE [for your name] ---------- */
@@ -305,8 +308,8 @@ body {
     </div>
     <div class="box_satu color-2">
     <div class="titlus">
-    <span>Age</span><!-- age-->
-    Depends <!-- your age -->
+    <span>Lives in:</span><!-- age-->
+    Nanakuli <!-- your age -->
     </div>
     </div>
 
