--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 }
 
 .color-2 {
-   background-color:#fff;
+   background-color:#18434a;
    background-image:url('https://puu.sh/thliP/ffb6b0a1d6.jpg');
 	background-size:70%;
 	background-position: 50% 50%;
