--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ body {
     font-family:Arial;
     padding:105px 0 76px 0;
     background-color:#fff;
+    background-image:url('https://puu.sh/thliP/ffb6b0a1d6.jpg');
+	background-size:100%;
+	background-position: 50% 30%;
     font-size:60px;
     color:#99aaaa;
     text-align:center;
