--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body {
     </div>
     <div class="box_satu color-2">
     <div class="titlus">
-    <span>Lives in:</span><!-- age-->
+    <span>From:</span><!-- age-->
     Nanakuli <!-- your age -->
     </div>
     </div>
