--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
     position:absolute;
     font-size:25px;
     margin:-30px 0 0 15px;
-    color:#111;
+    color:#000000;
 }
 
 /* --------- DON'T EDIT THIS ONE  ---------- */
@@ -314,9 +314,9 @@ body {
     </div>
 
     <div class="box_dua">
-    <h3>QUOTE</h3>
+    <h3>SAINT LOUIS</h3>
     <!-- your quote -->
-    Love isn’t just about feeling sure of the other person, knowing what she would give up for you. It’s knowing with certainty what you are willing to surrender for her sake. Make no mistake; each partner gives up something. Individual dreams are surrendered for a shared one.
+    Only alumni: Older Brother Jimmy<br> Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.
     </div>
     
     <div id="plus">
