--- a/index.html
+++ b/index.html
@@ -314,17 +314,17 @@ body {
     </div>
 
     <div class="box_dua">
-    <h3>SAINT LOUIS</h3>
+    <h3>FAMILY</h3>
     <!-- your quote -->
-    Only alumni: Older Brother Jimmy<br> Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.
+    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
     </div>
     
     <div id="plus">
      + <!-- plus button -->
     <div class="box_three">
     <div class="titlas">
-    <div class="zodiak">Zodiac</div><!-- zodiac -->
-    AQUARIUS &#9810; <!-- your zodiac -->
+    <div class="zodiak">Health?</div><!-- zodiac -->
+    Learning and Importance; <!-- your zodiac -->
     </div>
     </div>
 
