--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {
     width:250px;
     height:200px;
     line-height:24px;
-    font-sze:12px;
+    font-size:12px;
     padding:25px;
     font-family:Georgia;
     margin:-430px 0 0 450px;
@@ -161,6 +161,7 @@ body {
     padding:25px;
     font-family:Georgia;
     background-color:#ddddcc;
+    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
     margin:-223px 0 0 -850px;
     color:white;
     opacity:0;
@@ -316,7 +317,7 @@ body {
     <div class="box_dua">
     <h3>FAMILY</h3>
     <!-- your quote -->
-    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
+    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br><br>Only alumni: Older Brother Jimmy<br><br>Wants a successful job to help the family out.
     </div>
     
     <div id="plus">
@@ -324,14 +325,14 @@ body {
     <div class="box_three">
     <div class="titlas">
     <div class="zodiak">Health?</div><!-- zodiac -->
-    Learning and Importance; <!-- your zodiac -->
+    Learn and share <!-- your zodiac -->
     </div>
     </div>
 
     <div class="box_four">
     <div class="titlas">
-    <div class="zodiak">Likes</div><!-- likes -->
-    <font color="red">HTML</font>, <font color="green">CSS</font>, <font color="purple">ANIME</font><!-- your likes -->
+    <div class="zodiak"></div><!-- likes -->
+    <!--<font color="red"></font>, <font color="green">CSS</font>, <font color="purple">ANIME</font><!-- your likes -->
     </div>
     </div>
 
