--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ body {
     font-family:Georgia;
     background-color:#ddddcc;
     background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
+		background-position: 100% 35%;
+		background-size: 100%;
     margin:-223px 0 0 -850px;
     color:white;
     opacity:0;
