--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@ body {
     padding:25px;
     font-family:Georgia;
     background-color:#eeccaa;
+    background-image:url('https://puu.sh/thk3t/4ed9edcf99.jpg');
+		background-position: 100% 35%;
+		background-size: 100%;
     margin:-100px 0 0 -450px;
     color:white;
     opacity:0;
@@ -340,20 +343,20 @@ body {
 
     <div class="box_five">
     <div class="titlos">
-    <div class="zodiak">About Me</div>
+    <div class="zodiak">About</div>
     <!-- about [keep 4 lines!!] -->
-    Just a lazy kid who enjoys his hobbies to the fullest of his own abilities. Motivate me, then that's when progress is really made. Too bad most of that motivation goes to gaming. But otherwise, hello there! 
+    Enjoys playing sports.<br>Likes to be adventurous and do whatever around the island.<br>Hanging out with friends and playing video games.
     </div>
     </div>
 
     <div class="box_six">
     <div class="titlas">
-    <div class="zodiak">Links</div>
-    <!-- links -->
+    <div class="zodiak"><!--Links--></div>
+    <!-- links 
     <a href="https://lit-tracks.github.io/creativity/">Essay</a>
     <a href="#">and</a>
     <a href="#">Nothing</a>
-    <a href="#">Else</a>
+    <a href="#">Else</a>-->
     </div>
     </div>
 
