--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body {
     font-family:Georgia;
     background-color:#eeccaa;
     background-image:url('https://puu.sh/thk3t/4ed9edcf99.jpg');
-		background-position: 100% 35%;
+		background-position: 100% 25%;
 		background-size: 100%;
     margin:-100px 0 0 -450px;
     color:white;
@@ -322,7 +322,7 @@ body {
     <div class="box_dua">
     <h3>FAMILY</h3>
     <!-- your quote -->
-    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br><br>Only alumni: Older Brother Jimmy<br><br>Wants a successful job to help the family out.
+    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br><br>Wants a successful job to help the family out.
     </div>
     
     <div id="plus">
