--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ body {
     <div class="box_dua">
     <h3>FAMILY</h3>
     <!-- your quote -->
-    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br><br>Wants a successful job to help the family out.
+    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
     </div>
     
     <div id="plus">
