--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {
     width:250px;
     height:200px;
     line-height:24px;
-    font-size:12px;
+    font-sze:12px;
     padding:25px;
     font-family:Georgia;
     margin:-430px 0 0 450px;
