--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@ body {
     text-align:center;
     font-family:Arial;
     color:#99aaaa;
+    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
+	background-position: 100% 35%;
+	background-size: 50%;
+	background-repeat: none;
 }
 
 .box_dua h3:before {
@@ -161,7 +165,7 @@ body {
     padding:25px;
     font-family:Georgia;
     background-color:#ddddcc;
-    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
+    background-image:url('https://puu.sh/thk3s/1e20e6fb06.jpg');
 		background-position: 100% 35%;
 		background-size: 100%;
     margin:-223px 0 0 -850px;
