--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@ body {
     font-family:Georgia;
     margin:-430px 0 0 450px;
     color:white;
+    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
+	background-position: 100% 35%;
+	background-size: 50%;
+	background-repeat: none;
 }
 
 .box_dua h3 {
@@ -166,7 +170,7 @@ body {
     font-family:Georgia;
     background-color:#ddddcc;
     background-image:url('https://puu.sh/thk3s/1e20e6fb06.jpg');
-		background-position: 100% 35%;
+		background-position: 100% 45%;
 		background-size: 100%;
     margin:-223px 0 0 -850px;
     color:white;
