--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 .box_dua h3 {
     text-align:center;
     font-family:Arial;
-    color:#99aaaa;
+    color:#000000;
 }
 
 .box_dua h3:before {
