--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 .box_dua h3 {
     text-align:center;
     font-family:Arial;
-    color:#000000;
+    color:orange;
 }
 
 .box_dua h3:before {
@@ -326,7 +326,7 @@ body {
     <div class="box_dua">
     <h3>FAMILY</h3>
     <!-- your quote -->
-    Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
+    <br><br><br><br><br>Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
     </div>
     
     <div id="plus">
