--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body {
     margin:-430px 0 0 450px;
     color:white;
     background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
-	background-position: 100% 70%;
+	background-position: 100% 35%;
 	background-size: 100%;
 	background-repeat: none;
 }
@@ -119,7 +119,7 @@ body {
 .box_dua h3 {
     text-align:center;
     font-family:Arial;
-    color:orange;
+    color:#93A661;
 }
 
 .box_dua h3:before {
@@ -203,7 +203,7 @@ body {
     font-family:Georgia;
     background-color:#eeccaa;
     background-image:url('https://puu.sh/thk3t/4ed9edcf99.jpg');
-		background-position: 100% 25%;
+		background-position: 100% 22%;
 		background-size: 100%;
     margin:-100px 0 0 -450px;
     color:white;
