--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
    <head>
-     <title>{About Me}</title>
+     <title>** About Me **</title>
 <link rel="shortcut icon" href="{Favicon}">
 <link rel="alternate" type="application/rss+xml" href="{RSS}">
 <meta charset="UTF-8">
@@ -12,9 +12,9 @@
 body {
     margin:0;
     padding:0;
-    background-image:url('https://puu.sh/thkD6/ec8f750e66.jpg');
+    background-image:url('geometry__2x.png');
     background-color:#eee;
-    background-repeat:no-repeat;
+    background-repeat:repeat;
 }
 
 /* --------- CONTAINER + BACKGROUND FOR QUOTE  ---------- */
@@ -46,13 +46,12 @@ body {
 /* --------- BOX ONE AND TWO [color] ---------- */
 .color-1 {
     background-color:#18434a;
-    background-image:url('https://puu.sh/thk3J/0959dd68cd.jpg');
-	background-size:100%;
-	background-position: 50% 30%;
+    background-image:url('__kochiya_sanae_touhou_drawn_by_ke_ta__fcef81a7683dd985ca0fb92903192a4c.jpg');
+	background-size:125%;
 }
 
 .color-2 {
-   background-color:#18434a;
+   background-color:#fff;
 }
 
 /* --------- TITLE ONE [for your name] ---------- */
@@ -83,10 +82,7 @@ body {
     margin:-25px 0 0 -25px;
     font-family:Arial;
     padding:105px 0 76px 0;
-    background-color:#fff;	
-    background-image:url('https://puu.sh/thliP/ffb6b0a1d6.jpg');
-	background-size:200%;
-	background-position: 50% 30%;
+    background-color:#fff;
     font-size:60px;
     color:#99aaaa;
     text-align:center;
@@ -96,7 +92,7 @@ body {
     position:absolute;
     font-size:25px;
     margin:-30px 0 0 15px;
-    color:#000000;
+    color:#111;
 }
 
 /* --------- DON'T EDIT THIS ONE  ---------- */
@@ -110,16 +106,12 @@ body {
     font-family:Georgia;
     margin:-430px 0 0 450px;
     color:white;
-    background-image:url('https://puu.sh/thjTA/8db62b1ddd.jpg');
-	background-position: 100% 35%;
-	background-size: 100%;
-	background-repeat: none;
 }
 
 .box_dua h3 {
     text-align:center;
     font-family:Arial;
-    color:#1287A8;
+    color:#99aaaa;
 }
 
 .box_dua h3:before {
@@ -165,9 +157,6 @@ body {
     padding:25px;
     font-family:Georgia;
     background-color:#ddddcc;
-    background-image:url('https://puu.sh/thk3s/1e20e6fb06.jpg');
-		background-position: 100% 55%;
-		background-size: 100%;
     margin:-223px 0 0 -850px;
     color:white;
     opacity:0;
@@ -202,9 +191,6 @@ body {
     padding:25px;
     font-family:Georgia;
     background-color:#eeccaa;
-    background-image:url('https://puu.sh/thk3t/4ed9edcf99.jpg');
-		background-position: 100% 21%;
-		background-size: 100%;
     margin:-100px 0 0 -450px;
     color:white;
     opacity:0;
@@ -312,55 +298,55 @@ body {
 <div id="container_holder">
     <div class="box_satu color-1">
     <div class="titles">
-    <div class="name">Name</div><!-- name-->
-    Jaymason Nunuha <!-- your name -->
+    <div class="name">name</div><!-- name-->
+    JUSTIN <!-- your name -->
     </div>
     </div>
     <div class="box_satu color-2">
     <div class="titlus">
-    <span>From:</span><!-- age-->
-    Nanakuli <!-- your age -->
+    <span>age</span><!-- age-->
+    17 <!-- your age -->
     </div>
     </div>
 
     <div class="box_dua">
-    <h3>FAMILY</h3>
+    <h3>QUOTE</h3>
     <!-- your quote -->
-    <br><br><br><br><br><br><br>Has 4 other siblings: Jimmy, Justin, Jordan, and Jeanalle.<br>Only alumni: Older Brother Jimmy<br>Wants a successful job to help the family out.
+    Love isn’t just about feeling sure of the other person, knowing what she would give up for you. It’s knowing with certainty what you are willing to surrender for her sake. Make no mistake; each partner gives up something. Individual dreams are surrendered for a shared one.
     </div>
     
     <div id="plus">
      + <!-- plus button -->
     <div class="box_three">
     <div class="titlas">
-    <div class="zodiak">Health?</div><!-- zodiac -->
-    Learn and share <!-- your zodiac -->
+    <div class="zodiak">zodiac</div><!-- zodiac -->
+    AQUARIUS &#9810; <!-- your zodiac -->
     </div>
     </div>
 
     <div class="box_four">
     <div class="titlas">
-    <div class="zodiak"></div><!-- likes -->
-    <!--<font color="red"></font>, <font color="green">CSS</font>, <font color="purple">ANIME</font><!-- your likes -->
+    <div class="zodiak">likes</div><!-- likes -->
+    <font color="red">HTML</font>, <font color="green">CSS</font>, <font color="purple">ANIME</font><!-- your likes -->
     </div>
     </div>
 
     <div class="box_five">
     <div class="titlos">
-    <div class="zodiak">About</div>
+    <div class="zodiak">about me</div>
     <!-- about [keep 4 lines!!] -->
-    Enjoys playing sports.<br>Likes to be adventurous and do whatever around the island.<br>Hanging out with friends and playing video games.
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
     </div>
     </div>
 
     <div class="box_six">
     <div class="titlas">
-    <div class="zodiak"><!--Links--></div>
-    <!-- links 
-    <a href="https://lit-tracks.github.io/creativity/">Essay</a>
-    <a href="#">and</a>
-    <a href="#">Nothing</a>
-    <a href="#">Else</a>-->
+    <div class="zodiak">LINKS</div>
+    <!-- links -->
+    <a href="file:///Users/NewfagTriforce/Documents/Home/Ayy/homepage-sidebar.html">Homepage</a>,
+    <a href="#">omega</a>,
+    <a href="#">ghoule</a>,
+    <a href="#">enigma</a>
     </div>
     </div>
 
@@ -368,14 +354,6 @@ body {
 
     
 </div><!-- container ends -->
-
-<!-- credit, don't remove please -->
-<a title="&copy; Fukuo" href="http://fukuo.tumblr.com/" class="c">&copy;</a>
-<!--
-By Fukuo@Tumblr
- 
-All content, are made by Faiz Ichsan Jaya, please don't steal, redistribute as your own and claim as yours.
--->
 
 </body>
 </html>
