--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ body {
     <div class="titlos">
     <div class="zodiak">about me</div>
     <!-- about [keep 4 lines!!] -->
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
+    Just a lazy yet ambitious student, trying to improve himeself any way he can. Emphasis on trying.
     </div>
     </div>
 
